# libballistics

./: CHANGELOG  Makefile  Makefile.am  Makefile.in  README  RELEASE.NOTES  autogen.sh  config.status  configure  configure.ac  libtool
src/: ._angle.c  ._atmosphere.c  ._ballistics.h  ._example.c  ._retardation.c  ._retrieve.c  ._solve.c  Makefile  Makefile.am  Makefile.in  angle.c  atmosphere.c  auto-config.h  auto-config.h.in  ballistics.h  example.c  retardation.c  retrieve.c  solve.c  stamp-h1  windage.c  zero.c
src/.deps/: angle.Plo  atmosphere.Plo  retardation.Plo  retrieve.Plo  solve.Plo  windage.Plo  zero.Plo
