# Makefile.am for GNU External Ballistics Library
# Jonathan A. Zdziarski <jonathan@zdziarski.com>
#
# autoconf (GNU Autoconf) 2.59
# ltmain.sh (GNU libtool) 1.5.6
# automake (GNU automake) 1.9.2

includedir=@includedir@/libballistics

SUBDIRS = . src 
DIST_SUBDIRS = . src

EXTRA_DIST = autogen.sh RELEASE.NOTES CHANGELOG LICENSE README 

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 auto-config.h.in \
	config.guess config.sub configure depcomp install-sh   \
	ltmain.sh missing mkinstalldirs

DEFS = @DEFS@ 

ACLOCAL_AMFLAGS = 

